--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: Dockerfile.base
           tags: t42x/awxkit_base:latest,t42x/awxkit_base:${{ github.ref_name }}
           push: true
