ci: Do not tag image with latest tag

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
         with:
           context: .
           file: Dockerfile.base
-          tags: t42x/awxkit_base:latest,t42x/awxkit_base:${{ github.ref_name }}
+          tags: t42x/awxkit_base:${{ github.ref_name }}
           push: true
