--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Generate image tag
         id: image_tag
         run: |
-          echo ::set-output name=tag::$(echo ${{ github.event.release.tag_name }} | sed 's/^v//')
+          echo tag=$(echo ${{ github.event.release.tag_name }} | sed 's/^v//') >> $GITHUB_OUTPUT
 
       - name: Build && Push
         uses: docker/build-push-action@v4.0.0
