--- a/action.yml
+++ b/action.yml
@@ -40,6 +40,9 @@ inputs:
   inventory:
     description: "Name or ID of the associated inventory."
     required: false
+  credentials:
+    description: "Name or ID of the associated credentials."
+    required: false
   branch:
     description: "SCM branch to override."
     required: false
@@ -65,6 +68,7 @@ runs:
     SKIP_TAGS: ${{ inputs.skip_tags }}
     TIMEOUT: ${{ inputs.timeout }}
     INVENTORY: ${{ inputs.inventory }}
+    CREDENTIALS: ${{ inputs.credentials }}
     BRANCH: ${{ inputs.branch }}
     MONITOR: ${{ inputs.monitor }}
     EXTRA_VARS: ${{ inputs.extra_vars }}
