feat: extract job id

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -5,5 +5,5 @@ RUN pip install --no-cache-dir -r /requirements.txt
 
 RUN apk update \
   && apk upgrade \
-  && apk add bash \
+  && apk add bash jq \
   && rm -rf /var/cache/*/*
